# hexlet-environment-test

./: README.md  pyproject.toml
hexlet_hello_world/: example.py
hexlet_hello_world/scripts/: main.py
